fix table alignment

--- a/app/indexer/indexer-games-assigned/styles.less
+++ b/app/indexer/indexer-games-assigned/styles.less
@@ -82,7 +82,8 @@
             line-height: 16px;
             padding-left: 15px;
             font-weight: 500;
-            padding: @indexer-padding;
+            padding-top: @indexer-padding;
+            padding-bottom: @indexer-padding;
 
             &:first-child {
 
